[FLINK-17224] Address feedbacks